New settings fragment

--- a/app/src/main/res/layout/fragment_meters.xml
+++ b/app/src/main/res/layout/fragment_meters.xml
@@ -41,8 +41,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:paddingLeft="@dimen/spacing_large"
-                android:paddingRight="@dimen/spacing_large">
+                android:paddingLeft="@dimen/spacing_middle"
+                android:paddingRight="@dimen/spacing_middle">
 
                 <View
                     android:layout_width="match_parent"
@@ -60,7 +60,7 @@
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
 
-                        android:padding="@dimen/spacing_large">
+                        android:padding="@dimen/spacing_middle">
 
                         <androidx.cardview.widget.CardView
                             android:layout_width="wrap_content"
@@ -74,13 +74,13 @@
                                 android:layout_centerHorizontal="true"
                                 android:layout_centerVertical="true"
                                 android:background="@color/background_meeter_cold"
-                                android:contentDescription="@string/imageview_description"
+                                android:contentDescription="@string/image_description"
                                 app:srcCompat="@drawable/water_meter_cold_icon" />
 
                         </androidx.cardview.widget.CardView>
 
                         <View
-                            android:layout_width="@dimen/spacing_middle"
+                            android:layout_width="@dimen/spacing_large"
                             android:layout_height="0dp" />
 
                         <LinearLayout
@@ -112,7 +112,7 @@
                                 android:layout_height="match_parent"
                                 android:fontFamily="sans-serif-condensed-light"
                                 android:gravity="end|center_vertical"
-                                android:text="000000"
+                                android:text="@string/text_dummy"
                                 android:textIsSelectable="true"
                                 android:textSize="@dimen/text_size" />
 
@@ -147,7 +147,7 @@
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
 
-                        android:padding="@dimen/spacing_large">
+                        android:padding="@dimen/spacing_middle">
 
                         <androidx.cardview.widget.CardView
                             android:layout_width="wrap_content"
@@ -161,13 +161,13 @@
                                 android:layout_centerHorizontal="true"
                                 android:layout_centerVertical="true"
                                 android:background="@color/background_meeter_hot"
-                                android:contentDescription="@string/imageview_description"
+                                android:contentDescription="@string/image_description"
                                 app:srcCompat="@drawable/water_meter_hot_icon" />
 
                         </androidx.cardview.widget.CardView>
 
                         <View
-                            android:layout_width="@dimen/spacing_middle"
+                            android:layout_width="@dimen/spacing_large"
                             android:layout_height="0dp" />
 
                         <LinearLayout
@@ -199,7 +199,7 @@
                                 android:layout_height="match_parent"
                                 android:fontFamily="sans-serif-condensed-light"
                                 android:gravity="end|center_vertical"
-                                android:text="000000"
+                                android:text="@string/text_dummy"
                                 android:textIsSelectable="true"
                                 android:textSize="@dimen/text_size" />
 
@@ -238,7 +238,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:orientation="horizontal"
-                            android:padding="@dimen/spacing_large">
+                            android:padding="@dimen/spacing_middle">
 
                             <androidx.cardview.widget.CardView
                                 android:layout_width="wrap_content"
@@ -251,13 +251,13 @@
                                     android:layout_height="@dimen/button_size"
                                     android:layout_centerInParent="true"
                                     android:background="@color/background_meeter_electric"
-                                    android:contentDescription="@string/imageview_description"
+                                    android:contentDescription="@string/image_description"
                                     app:srcCompat="@drawable/electro_meter_icon" />
 
                             </androidx.cardview.widget.CardView>
 
                             <View
-                                android:layout_width="@dimen/spacing_middle"
+                                android:layout_width="@dimen/spacing_large"
                                 android:layout_height="0dp" />
 
                             <LinearLayout
@@ -282,15 +282,15 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:orientation="horizontal"
-                            android:padding="@dimen/spacing_large">
+                            android:padding="@dimen/spacing_middle">
 
                             <ImageView
                                 android:layout_width="@dimen/button_size"
                                 android:layout_height="@dimen/button_size"
-                                android:contentDescription="@string/imageview_description" />
+                                android:contentDescription="@string/image_description" />
 
                             <View
-                                android:layout_width="@dimen/spacing_middle"
+                                android:layout_width="@dimen/spacing_large"
                                 android:layout_height="0dp" />
 
                             <LinearLayout
@@ -352,15 +352,15 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:orientation="horizontal"
-                            android:padding="@dimen/spacing_large">
+                            android:padding="@dimen/spacing_middle">
 
                             <ImageView
                                 android:layout_width="@dimen/button_size"
                                 android:layout_height="@dimen/button_size"
-                                android:contentDescription="@string/imageview_description" />
+                                android:contentDescription="@string/image_description" />
 
                             <View
-                                android:layout_width="@dimen/spacing_middle"
+                                android:layout_width="@dimen/spacing_large"
                                 android:layout_height="0dp" />
 
                             <LinearLayout
@@ -421,15 +421,15 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:orientation="horizontal"
-                            android:padding="@dimen/spacing_large">
+                            android:padding="@dimen/spacing_middle">
 
                             <ImageView
                                 android:layout_width="@dimen/button_size"
                                 android:layout_height="@dimen/button_size"
-                                android:contentDescription="@string/imageview_description" />
+                                android:contentDescription="@string/image_description" />
 
                             <View
-                                android:layout_width="@dimen/spacing_middle"
+                                android:layout_width="@dimen/spacing_large"
                                 android:layout_height="0dp" />
 
                             <LinearLayout
@@ -491,7 +491,7 @@
 
                 <View
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/spacing_large" />
+                    android:layout_height="@dimen/spacing_middle" />
 
             </LinearLayout>
 
