--- a/app/src/main/res/layout/fragment_dashboard_card.xml
+++ b/app/src/main/res/layout/fragment_dashboard_card.xml
@@ -2,11 +2,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="1dp"
-    app:strokeWidth="0dp"
+    android:layout_margin="2dp"
+    app:strokeWidth="1px"
     app:cardBackgroundColor="@color/white"
     app:cardCornerRadius="3dp"
-    app:cardElevation="10dp">
+    app:cardElevation="3dp">
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -17,7 +17,7 @@
         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_marginEnd="@dimen/spacing_middle"
+            android:layout_marginEnd="@dimen/spacing_large"
             android:background="@color/background_button_auto"
             android:gravity="center">
 
@@ -29,8 +29,7 @@
                 android:layout_marginTop="@dimen/spacing_small"
                 android:layout_marginEnd="@dimen/spacing_small"
                 android:layout_marginBottom="@dimen/spacing_small"
-                android:contentDescription="@string/imageview_description"
-                app:srcCompat="@drawable/bedroom" />
+                android:contentDescription="@string/image_description"/>
 
         </RelativeLayout>
         <LinearLayout
@@ -44,7 +43,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif-condensed"
-                android:text="@string/dashboard_caption_kitchen"
                 android:textSize="@dimen/text_size" />
 
 
