--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,10 +10,10 @@
 
     <!-- General spacing -->
     <dimen name="spacing_small">3dp</dimen>
-    <dimen name="spacing_middle">10dp</dimen>
-    <dimen name="spacing_large">5dp</dimen>
-    <dimen name="spacing_xlarge">35dp</dimen>
+    <dimen name="spacing_middle">5dp</dimen> <!--без основного-->
+    <dimen name="spacing_large">10dp</dimen>
+    <dimen name="spacing_xlarge">20dp</dimen>
     <dimen name="spacing_xxlarge">50dp</dimen>
-    <dimen name="text_margin">16dp</dimen>
+    <dimen name="spacing_xlarge_old">35dp</dimen>
 
 </resources>
