--- a/app/src/main/res/layout/fragment_settings_card_element_dimming.xml
+++ b/app/src/main/res/layout/fragment_settings_card_element_dimming.xml
@@ -2,8 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:theme="@style/Theme.MaterialComponents.DayNight"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:theme="@style/Theme.MaterialComponents.DayNight">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -22,8 +22,8 @@
                 android:id="@+id/settings_dimming_head"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/text_item"
                 android:fontFamily="sans-serif-condensed"
+                android:textColor="@color/text_item"
                 android:textSize="@dimen/text_size_low" />
 
             <TextView
