--- a/app/src/main/res/layout/fragment_dashboard_image_button_with_text.xml
+++ b/app/src/main/res/layout/fragment_dashboard_image_button_with_text.xml
@@ -13,6 +13,7 @@
         android:src="@drawable/wf" />
 
     <LinearLayout
+        android:id="@+id/temp_field"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/button_margin">
