--- a/app/src/main/res/layout/fragment_settings_card.xml
+++ b/app/src/main/res/layout/fragment_settings_card.xml
@@ -3,8 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/spacing_middle"
-    app:cardBackgroundColor="@color/white"
-    app:cardCornerRadius="3dp"
+    app:cardCornerRadius="@dimen/corner_radius"
     app:cardElevation="3dp"
     app:strokeWidth="1px">
 
@@ -30,7 +29,6 @@
                 android:textSize="@dimen/text_size" />
 
         </RelativeLayout>
-
         <LinearLayout
             android:id="@+id/settings_card_container"
             android:layout_width="match_parent"
