--- a/app/src/main/res/layout/fragment_dashboard_card.xml
+++ b/app/src/main/res/layout/fragment_dashboard_card.xml
@@ -38,7 +38,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/head_text"
+                android:id="@+id/scenario_sources_head_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif-condensed"
