--- a/app/src/main/res/layout/fragment_scenario_add_new.xml
+++ b/app/src/main/res/layout/fragment_scenario_add_new.xml
@@ -49,11 +49,12 @@
                 android:text="Последовательность действий"
                 android:textSize="@dimen/text_size" />
 
-            <LinearLayout
-                android:id="@+id/scenario_new_actions"
+            <GridView
+                android:id="@+id/scenario_new_actions_grid"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal" />
+                android:layout_height="match_parent"
+                android:layout_weight="100"
+                android:numColumns="5" />
 
             <TextView
                 android:layout_width="wrap_content"
