--- a/app/src/main/res/layout/fragment_scenario_add_new_action_button.xml
+++ b/app/src/main/res/layout/fragment_scenario_add_new_action_button.xml
@@ -1,10 +1,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/scenario_add_new_button"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:clickable="true"
     android:focusable="true"
     android:gravity="center"
+    android:layout_gravity="center_horizontal"
+    android:layout_margin="@dimen/spacing_small"
     android:orientation="vertical"
     android:padding="@dimen/spacing_small">
 
