--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -111,13 +111,18 @@
     <item name="settings_temp_w0_field" type="id" />
     <item name="settings_w0_increase" type="id" />
     <item name="settings_meter_hot_decrease" type="id" />
+    <item name="value_water_hot_field" type="id" />
     <item name="settings_meter_hot_increase" type="id" />
     <item name="settings_meter_cold_decrease" type="id" />
+    <item name="value_water_cold_field" type="id" />
     <item name="settings_meter_cold_increase" type="id" />
     <item name="settings_meter_t1_decrease" type="id" />
+    <item name="value_electric_t1_field" type="id" />
     <item name="settings_meter_t1_increase" type="id" />
     <item name="settings_meter_t2_decrease" type="id" />
+    <item name="value_electric_t2_field" type="id" />
     <item name="settings_meter_t2_increase" type="id" />
     <item name="settings_meter_t3_decrease" type="id" />
+    <item name="value_electric_t3_field" type="id" />
     <item name="settings_meter_t3_increase" type="id" />
 </resources>
