Settings Inc and Dec buttons correction Websocket connection to the local server for testing

--- a/app/src/main/res/layout/fragment_settings_card_element_meters_correction.xml
+++ b/app/src/main/res/layout/fragment_settings_card_element_meters_correction.xml
@@ -51,7 +51,8 @@
             android:layout_marginLeft="@dimen/spacing_middle"
             android:layout_marginRight="@dimen/spacing_middle"
             android:gravity="center_vertical"
-            android:inputType="number"
+            android:inputType="numberDecimal"
+            android:imeOptions="actionSend"
             android:text="@string/text_dummy"
             android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
             android:textColor="@color/text_low"
