Load config.json from GitHub try. Using view.Tag for command compose to server for Main and Settings tab. For testing. Local WS server choose option. onBackPressed override is deprecated. Changes in Settings tab. Processing data from server. Minor changes.

--- a/app/src/main/res/layout/fragment_settings_card_element_dimming.xml
+++ b/app/src/main/res/layout/fragment_settings_card_element_dimming.xml
@@ -51,6 +51,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginHorizontal="@dimen/spacing_xlarge_old"
+        android:enabled="false"
         android:stepSize="1"
         android:valueFrom="@integer/slider_from_value"
         android:valueTo="@integer/slider_to_value" />
